infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: event-bus-depl
 labels:
  app: event-bus
spec:
 replicas: 1
 selector:
  matchLabels:
   app: event-bus
 template:
  metadata:
   labels:
     app: event-bus
  spec:
    containers:
     - name: event-bus
       image: sunilmkamble17/event-bus
       ports: 
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4001
      targetPort: 4001
