infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
  labels: 
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: sunilmkamble17/order
          ports: 
          - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 4004
      targetPort: 4004
