infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: product-depl
 labels:
    app: product
spec:
 replicas: 1
 selector:
  matchLabels:
   app: product
 template:
  metadata:
   labels:
     app: product
  spec:
    containers:
     - name: product
       image: sunilmkamble17/product
       ports: 
        - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: product-srv
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 4003
      targetPort: 4003
