infra/k8s/ui-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: ui-depl
spec:
 replicas: 1
 selector:
  matchLabels:
   app: ui
 template:
  metadata:
   labels:
     app: ui
  spec:
    containers:
     - name: ui
       image: sunilmkamble17/ui
---
apiVersion: v1
kind: Service
metadata:
  name: ui-srv
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - name: ui
      protocol: TCP
      port: 3000
      targetPort: 3000
