infra/k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: user-depl
 labels:
    app: user
spec:
 replicas: 1
 selector:
  matchLabels:
   app: user
 template:
  metadata:
   labels:
     app: user
  spec:
    containers:
     - name: user
       image: sunilmkamble17/user
       ports: 
        - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 4002
      targetPort: 4002
